ags (2.3.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsFMSynth
	* implemented AgsFMSyncSynth
	* implemented AgsFMOscillator
	* implemented AgsPitchSampler and AgsPitchSamplerFile
	* implemented AgsSFZFile, AgsSFZGroup, AgsSFZRegion and AgsSFZSample
	* implemented AgsSFZLoader
	* implemented ags-lfo recall
	* implemented AgsComplex buffer type
	* implemented AgsFrequencyMapManager
	* implemented AgsFrequencyMap to compute max likelihood
	* implemented ags_fm_synth_util.h supporting FM synthesis
	* implemented ags_lfo_synth_util.h supporting LFO amplification
	* implemented ags_fourier_transform_util.c
	* implemented ags_filter_util.c
	* extended ags_simple_file.c
	* extended ags_audio_buffer_util.h to support complex data type
	* extended ags_synth_util.h to support complex data type
	* extended ags_synth_util.h to support impulse oscillator
	* added ags_fourier_transform_util_test.c
	* added ags_fm_synth_util_test.c
	* added ags_filter_util_test.c

ags (2.2.39)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* extended ags_audio_buffer_util.h prototype to complete Float32 support

ags (2.2.38)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved iterating buffer in ags_audio_buffer_util.c
	* fixed unitialized values related to FreeBSD

ags (2.2.37)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed more unitialized values

ags (2.2.36)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved iterating buffer in ags_audio_buffer_util.c
	* work-around for broken lock-free audio buffer, reverted see below
	* reverted ags_devout.c to 2.2.25
	* reverted ags_play_audio_signal.c to 2.2.25

ags (2.2.35)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* replaced regular expression by while loop in ags_turtle_read_pn_chars_base()

ags (2.2.34)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]