@@ -1,8 +1,4 @@
 # Makefile variables for PO directory in any package using GNU gettext.
-#
-# Copyright (C) 2003-2017 Free Software Foundation, Inc.
-# This file, Makevars,template, is free software; the Free Software Foundation
-# gives unlimited permission to use, copy, distribute, and modify it.
 
 # Usually the message domain is the same as the package name.
 DOMAIN = $(PACKAGE)
